Fix mobile layout and player alignment

--- a/css/style.css
+++ b/css/style.css
@@ -39,16 +39,19 @@ body.game {
 
 #buttonCluster {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  padding: 2vmin;
 }
 
 #buttonCluster .menu-button {
-  width: 160px;
-  margin: 1px 0;
+  width: min(15vmin, 160px);
+  margin: 1vmin 0;
 }
 
 #gameContainer {
@@ -61,8 +64,6 @@ body.game {
 #gameCanvas {
   display: block;
   background: url("../Blank Screen.png") center/cover no-repeat;
-  transform: scale(1.2);
-  transform-origin: center;
   width: 100%;
   height: 100%;
 }
